Fix an issue where when sidebar is longer than content, sidebar would overflow incorrectly.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,7 @@ p {
   box-shadow: 0 5px 10px lightgrey;
   background-color: #F1F1C6;
   border: 1px solid #CCC;
+  overflow: auto; /* act as clear:both */
   width: 960px;
 }
 
